# sv-json-schema

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO.md  app.py  pyproject.toml  requirements.txt  sv_tb.f
data/: AddrMap.json  ExampleType.json  InnerOtherComplex.json  MasterCfg.json  OtherComplexTypeForArray.json
docs/: FEATURES.md
examples/: axi4_cfg_schema.json  sv_lang_tb.mako  types.json
examples/data/: AddrMap.json  Cfg.json  OtherComplexType.json  SlaveCfg.json
serializers/: bitvec.py  composition.py  diagnostics.py  intformat.py  oneof.py  recursive.py  sv_json_macros.svh  sv_lang.mako  sv_lang.py  sv_lang_tb.mako  sv_tb_pkg.sv
src/sv_json_schema/: __init__.py  __main__.py  cli.py  sv_lang.py
src/sv_json_schema/data/: sv_lang_tb.mako
tests/: conftest.py  test_bitvec.py  test_composition.py  test_diagnostics.py  test_e2e.py  test_generation.py  test_oneof.py  test_recursive.py  test_sv_lang.py
tests/expected/: all_types.config_m.sv  all_types.testbench.sv  axi4.config_m.sv  axi4.testbench.sv  with_allof.config_m.sv  with_allof.testbench.sv  with_oneof.config_m.sv  with_oneof.testbench.sv  with_plain_enum.config_m.sv  with_recursive.config_m.sv  with_recursive.testbench.sv  with_strict.config_m.sv  with_strict.testbench.sv  with_validation.config_m.sv  with_validation.testbench.sv
tests/fixtures/: all_types.json  with_allof.json  with_oneof.json  with_plain_enum.json  with_recursive.json  with_strict.json  with_validation.json
tests/fixtures/data/: AddrMap.json  AllTypes.json  Cfg.json  Inner.json  Loose.json  RegMap.json  (+1 more)
(+5 files in other folders)
