[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sv-json-schema"
version = "0.1.0"
description = "Generate UVM SystemVerilog configuration classes from JSON Schema."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Milind Patil"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "Mako>=1.1",
    "json-ref-dict>=0.7",
    "statham-schema>=0.15.1",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
sv-json-schema = "sv_json_schema.cli:main"

[project.urls]
Source = "https://github.com/mpatil/sv-json-schema"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sv_json_schema = ["data/*.mako", "data/*.sv", "data/*.svh"]
